fix central alignment

--- a/src/landing_v2/landing.scss
+++ b/src/landing_v2/landing.scss
@@ -191,6 +191,7 @@ div {
     &__unit {
       margin-bottom: 50px;
       display: flex;
+      justify-content: flex-start;
     }
 
     &__right-side {
